privacy policy testing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>プライバシーポリシー</h1>
+  <h2>利用者情報の取得</h2>
+  <p>本アプリが利用者の個人情報を取得することはありません</p>
 </body>
 </html>
