--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
 <body>
 <h1>プライバシーポリシー</h1>
+  <p>アプリ『入場仕分人』のプライバシーポリシーです</p>
   <h2>利用者情報の取得</h2>
   <p>本アプリが利用者の個人情報を取得することはありません</p>
+  <h2>利用者情報の利用</h2>
+  <p>本アプリが利用者の個人情報を利用することはありません</p>
+  <h2>利用者情報の第三者提供</h2>
+  <p>本アプリが利用者の個人情報を第三者に提供することはありません</p> 
+  <h2>使用ツール</h2>
+  <p>本アプリでは、広告配信ツールとしてAdMob(Google Inc.)を使用しており、AdMobが利用者の情報を自動取得する場合があります。 取得する情報、利用目的、第三者への提供等につきましては、広告配信事業者のアプリケーション・プライバシーポリシーよりご確認ください。</p> 
+  <h2>お問い合わせ先</h2>
+  <p>何かご不明点がございましたら下記よりお問い合わせください</p>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdceWzayrFnLxqW2pIdnb3mJbABR-2bto9WLeRbRvO0_Oqs_g/viewform?usp=sf_link">お問い合わせフォーム</a>
 </body>
 </html>
